--- a/index.html
+++ b/index.html
@@ -11,20 +11,43 @@
 </head>
 
 <body>
-
+	<img class="bg" src="./bg.png" />
+	<!-- <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_K1fuzKXfSrn2Na" async> </script> </form> -->
 	<nav class="header">
 		<div class="logo">LOGO
 		</div>
 		<div class="items">
 			<ul>
 				<li><a>Home</a></li>
-				<li><a>About</a></li>
-				<li><a herf="./Family.html">Execom</a></li>
+				<li><a herf="www.google.com">About</a></li>
+				<li><a href="./Family.html">Execom</a></li>
 				<li><a>Events</a></li>
-				<li><a>Features</a></li>
+				<li><a>Inspiro</a></li>
 			</ul>
 		</div>
 	</nav>
+
+
+
+	<div class="ham">
+
+		<input id="toggle" type="checkbox">
+	
+		
+		<label class="toggle-container" for="toggle">
+		 
+		  <span class="button button-toggle"></span>
+		</label>
+	
+		<nav class="nav">
+		  <a class="nav-item" href="">Dashboard</a>
+		  <a class="nav-item" href="">History</a>
+		  <a class="nav-item" href="">Statistics</a>
+		  <a class="nav-item" href="">Settings</a>
+		</nav>
+	</div>
+	
+
 
 
 	<div class="title">
@@ -79,19 +102,6 @@
 					</figure>
 				</div>
 			</li>
-			<!-- <li class="card" id="card_4">
-				<div class="card__content">
-					<div>
-						<h2>ABOUT SB</h2>
-						<p>IEEE Student Branch at A.D. Patel Institute of Technology, CVM University was established in the year 2008 and currently comprises 6 Chapters, 1 Affinity Group, and a Special Interest Group. Since its foundation, IEEE ADIT SB has worked towards achieving the motto of IEEE: “Advancing Technology for Humanity” in its truest sense and has been decorated by numerous awards.</p>
-						<p><a href="#top" class="btn btn--accent">Read more</a></p>
-					</div>
-					<figure>
-						<img src="https://codyhouse.co/demo-tutorials/stacking-cards/assets/img/img-2.jpg"
-							alt="Image description">
-					</figure>
-				</div>
-			</li> -->
 		</ul>
 	</main>
 </body>
