--- a/Family.html
+++ b/Family.html
@@ -17,28 +17,28 @@
 		<div class="items">
 			<ul>
 				<li><a href="./index.html">Home</a></li>
-				<li><a>About</a></li>
+				<li><a herf="/www.google.com">About</a></li>
 				<li><a>Execom</a></li>
 				<li><a>Events</a></li>
-				<li><a>Features</a></li>
+				<li><a>Inspiro</a></li>
 			</ul>
 		</div>
 	</nav>
     <div class="g">
         <div class="select1">
-            <p><img class="icon adit" src="./logos/adit.png"/><img class="show" src="./POST (1).png" /></p>
+            <p><img class="icon adit" src="./logos/adit.png"/><img class="show" src="./mainexecom.png" /></p>
         </div>
     </div>
     <div class="g">
         <div class="select">
-            <p><img class="icon" src="./logos/cs.png"/><img class="show" src="https://images.unsplash.com/photo-1541687278731-4d12156e3690?ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=1350&amp;q=80" /></p>
-            <p><img class="icon" src="./logos/ias.png"/><img class="show" src="https://images.unsplash.com/photo-1553868756-0a90dd2023e7?ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=1267&amp;q=80" /></p>
-            <p><img class="icon" src="./logos/npss.png"/><img class="show" src="https://images.unsplash.com/photo-1553870587-ffe7752a5b1f?ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=1330&amp;q=80" /></p>
-            <p><img class="icon" src="./logos/pels.png"/><img class="show" src="https://images.unsplash.com/photo-1553870587-ffe7752a5b1f?ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=1330&amp;q=80" /></p>
-            <p><img class="icon" src="./logos/pes.png"/><img class="show" src="https://images.unsplash.com/photo-1553870587-ffe7752a5b1f?ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=1330&amp;q=80" /></p>
-            <p><img class="icon" src="./logos/ras.png"/><img class="show" src="https://images.unsplash.com/photo-1553870587-ffe7752a5b1f?ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=1330&amp;q=80" /></p>
-            <p><img class="icon" src="./logos/sight.png"/><img class="show" src="https://images.unsplash.com/photo-1553870587-ffe7752a5b1f?ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=1330&amp;q=80" /></p>
-            <p><img class="icon" src="./logos/wie.png"/><img class="show" src="https://images.unsplash.com/photo-1553870587-ffe7752a5b1f?ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=1330&amp;q=80" /></p>
+            <p><img class="icon" src="./logos/cs.png"/><img class="show" src="./CS.png" /></p>
+            <p><img class="icon" src="./logos/ias.png"/><img class="show" src="./ias.png" /></p>
+            <p><img class="icon" src="./logos/npss.png"/><img class="show" src="./npss.png" /></p>
+            <p><img class="icon" src="./logos/pels.png"/><img class="show" src="./pels.png" /></p>
+            <p><img class="icon" src="./logos/pes.png"/><img class="show" src="./pes.png" /></p>
+            <p><img class="icon" src="./logos/ras.png"/><img class="show" src="./ras.png" /></p>
+            <p><img class="icon" src="./logos/sight.png"/><img class="show" src="sight.png" /></p>
+            <p><img class="icon" src="./logos/wie.png"/><img class="show" src="wie.png" /></p>
         </div>
     </div>
     
