--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<li><a herf="www.google.com">About</a></li>
 				<li><a href="./Family.html">Execom</a></li>
 				<li><a>Events</a></li>
-				<li><a href="./Inspiro4.0\index.html">Inspiro</a></li>
+				<li><a href="./Inspiro4.0/index.html">Inspiro</a></li>
 			</ul>
 		</div>
 	</nav>
