--- a/Family.html
+++ b/Family.html
@@ -24,21 +24,37 @@
 			</ul>
 		</div>
 	</nav>
+    <div class="ham">
+
+		<input id="toggle" type="checkbox">
+	
+		
+		<label class="toggle-container" for="toggle">
+		  <span class="button button-toggle"></span>
+		</label>
+	
+		<nav class="nav">
+		  <a class="nav-item" href="">Dashboard</a>
+		  <a class="nav-item" href="">History</a>
+		  <a class="nav-item" href="">Statistics</a>
+		  <a class="nav-item" href="">Settings</a>
+		</nav>
+	</div>
     <div class="g">
         <div class="select1">
-            <p><img class="icon adit" src="./logos/adit.png"/><img class="show" src="./mainexecom.png" /></p>
+            <div class="p"><img class="icon adit" src="./logos/adit.png"/><img class="show" src="./mainexecom.png" /></div>
         </div>
     </div>
     <div class="g">
         <div class="select">
-            <p><img class="icon" src="./logos/cs.png"/><img class="show" src="./CS.png" /></p>
-            <p><img class="icon" src="./logos/ias.png"/><img class="show" src="./ias.png" /></p>
-            <p><img class="icon" src="./logos/npss.png"/><img class="show" src="./npss.png" /></p>
-            <p><img class="icon" src="./logos/pels.png"/><img class="show" src="./pels.png" /></p>
-            <p><img class="icon" src="./logos/pes.png"/><img class="show" src="./pes.png" /></p>
-            <p><img class="icon" src="./logos/ras.png"/><img class="show" src="./ras.png" /></p>
-            <p><img class="icon" src="./logos/sight.png"/><img class="show" src="sight.png" /></p>
-            <p><img class="icon" src="./logos/wie.png"/><img class="show" src="wie.png" /></p>
+            <div class="p"><img class="icon" src="./logos/cs.png"/><img class="show" src="./CS.png" /></div>
+            <div class="p"><img class="icon" src="./logos/ias.png"/><img class="show" src="./ias.png" /></div>
+            <div class="p"><img class="icon" src="./logos/npss.png"/><img class="show" src="./npss.png" /></div>
+            <div class="p"><img class="icon" src="./logos/pels.png"/><img class="show" src="./pels.png" /></div>
+            <div class="p"><img class="icon" src="./logos/pes.png"/><img class="show" src="./pes.png" /></div>
+            <div class="p"><img class="icon" src="./logos/ras.png"/><img class="show" src="./ras.png" /></div>
+            <div class="p"><img class="icon" src="./logos/sight.png"/><img class="show" src="sight.png" /></div>
+            <div class="p"><img class="icon" src="./logos/wie.png"/><img class="show" src="wie.png" /></div>
         </div>
     </div>
     
