--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="./index.css" />
 	<script type="text/javascript" src="./index.js"></script>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NG3KMPD0JG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NG3KMPD0JG');
+</script>
 </head>
 
 <body>
