--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 	<link rel="stylesheet" href="./index.css" />
 	<script type="text/javascript" src="./index.js"></script>
 	<!-- Google tag (gtag.js) -->
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZNJ05DND92"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZNJ05DND92');
+</script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-NG3KMPD0JG"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
