--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
 
   gtag('config', 'G-NG3KMPD0JG');
 </script>
+	<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PQ7CQW6MEM');
+</script>
 </head>
 
 <body>
