--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
 
   gtag('config', 'G-PQ7CQW6MEM');
 </script>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-85VP7TWZ9T"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-85VP7TWZ9T');
+</script>
+
 </head>
 
 <body>
