--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
 
   gtag('config', 'G-85VP7TWZ9T');
 </script>
+	<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HF31SH80Y9');
+</script>
 
 </head>
 
