--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
 
   gtag('config', 'G-HF31SH80Y9');
 </script>
+	</script>
+	<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-41LWHJ7661');
+</script>
+
 
 </head>
 
