--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-4WDRQ90440');
+  gtag('config', 'G-4WDRQ9044D');
 </script>
 	<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HF31SH80Y9"></script>
@@ -93,7 +93,15 @@
 
   gtag('config', 'G-41LWHJ7661');
 </script>
+</script>
+	</script>
+	<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-6V99JBY6XJ');
+</script>
 
 </head>
 
